# homedoc-oh2webui

./: .editorconfig  .env.example  .gitignore  AGENTS.md  API_FLOW.md  API_REFERENCE.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CHAT_PAYLOAD.md  NAMING.md  POC_REPORT.md  PROMPTS.md  REPRODUCIBILITY.md  ROADMAP.md  oh2webui_flow.md
src/oh2webui_cli/: chatter.py  cli.py  config.py  distiller.py  extractor.py  grouper.py  packager.py  uploader.py
tests/: __init__.py  conftest.py  test_chatter.py  test_distill.py  test_grouping.py  test_uploader.py
