[project]
name = "codex-cli-oh2webui"
version = "0.2.1"
description = "Extract OpenHands sessions, distill artifacts, and seed Open WebUI."
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
oh2webui = "oh2webui_cli.cli:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
